<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cph.drivers.driverperson.Question">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_back" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark"
            android:padding="15dp"
            android:text="@string/ques"
            android:textColor="black"
            android:textSize="20dp"
            android:textStyle="bold|normal" />


    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:src="@color/colorPrimaryDark"
        android:id="@+id/imageView" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:padding="40dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/driverfast"
                    android:textSize="16dp"
                    android:textStyle="bold|normal" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rddriverfast1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/driverfast1"
                        android:textSize="14dp"
                        android:textStyle="normal" />

                    <RadioButton
                        android:id="@+id/rddriverfast2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/driverfast2"
                        android:textSize="14dp"
                        android:textStyle="normal" />
                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/phone"
                    android:textSize="16dp"
                    android:textStyle="bold|normal" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rdphone1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/phone1"
                        android:textSize="14dp"
                        android:textStyle="normal" />

                    <RadioButton
                        android:id="@+id/rdphone2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone2"
                        android:textSize="14dp"
                        android:textStyle="normal" />

                    <RadioButton
                        android:id="@+id/rdphone3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone3"
                        android:textSize="14dp"
                        android:textStyle="normal" />
                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/smoking"
                    android:textSize="16dp"
                    android:textStyle="bold|normal" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/smoking1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/smoking1"
                        android:textSize="14dp"
                        android:textStyle="normal" />

                    <RadioButton
                        android:id="@+id/smoking2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/smoking2"
                        android:textSize="14dp"
                        android:textStyle="normal" />
                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/conduct"
                    android:textSize="16dp"
                    android:textStyle="bold|normal" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rdconduct1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/conduct1"
                        android:textSize="14dp"
                        android:textStyle="normal" />

                    <RadioButton
                        android:id="@+id/rdconduct2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/conduct2"
                        android:textSize="14dp"
                        android:textStyle="normal" />
                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:gravity="center_horizontal"
        android:id="@+id/btnsave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:text="@string/supmit"
        android:textSize="20dp"
        android:textStyle="bold|normal" />


</RelativeLayout>
