<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cph.drivers.driverperson.Register">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <ImageView
            android:layout_marginStart="10dp"
            android:id="@+id/rback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_blackspap" />

        <TextView
            android:id="@+id/eRigister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark"
            android:padding="15dp"
            android:text="@string/newregis"
            android:textColor="@color/black"
            android:textSize="22dp"
            android:textStyle="bold|normal" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout"
        android:orientation="vertical">

        <TextView
            android:layout_marginStart="28dp"
            android:id="@+id/txtDate"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="25dp"
            android:text="@string/information"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold|normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3dp"
        android:id="@+id/linearLayout4"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/editrusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rname"
            android:inputType="text"
            android:textSize="@dimen/h3" />

        <EditText
            android:id="@+id/editrlname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rlname"
            android:inputType="text"
            android:textSize="@dimen/h3" />

        <EditText
            android:id="@+id/editpid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rid"
            android:inputType="text"
            android:textSize="@dimen/h3" />

        <EditText
            android:id="@+id/edittal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rtal"
            android:inputType="text"
            android:textSize="@dimen/h3" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout"
        android:orientation="vertical">

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/memberinformation"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold|normal"
        android:layout_below="@+id/linearLayout4"
        android:layout_marginStart="28dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3dp"
        android:id="@+id/linearLayout5"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:weightSum="1"
        android:layout_below="@+id/textView">

        <EditText
            android:id="@+id/edituser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ruser"
            android:inputType="text"
            android:textSize="@dimen/h3" />
        <EditText
            android:imeOptions="actionUnspecified"
            android:id="@+id/editpw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rpassword"
            android:inputType="text"
            android:textSize="@dimen/h3" />
        <EditText
            android:maxLines="1"
            android:imeOptions="actionUnspecified"
            android:id="@+id/editcpw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rconfirmpassword"
            android:inputType="text"
            android:textSize="@dimen/h3" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <ImageView
                android:id="@+id/rUpload"
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_driver"
                android:layout_weight="0.60" />

            <Button
                android:id="@+id/btnUpload"
                android:layout_width="220dp"
                android:layout_height="47dp"
                android:layout_marginStart="10dp"
                android:text="@string/rupload"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_marginStart="20dp"
        android:id="@+id/rSupmit"
        android:background="@drawable/bg_btn_button"
        android:textColor="@color/black"
        android:layout_alignParentBottom="true"
        android:textStyle="bold|normal"
        android:textSize="@dimen/h2"
        android:text="@string/btnregis"
        android:layout_width="320dp"
        android:layout_height="50dp" />

</RelativeLayout>
