<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cph.drivers.driverperson.Deliver">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_back" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark"
            android:padding="10dp"
            android:text="@string/txt1"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold|normal" />


    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:padding="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="@dimen/margin"
                    android:text="@string/txt2"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtAnuser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginStart="50dp"
                    android:text="@string/txt3"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/txt4"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold|normal" />

                <Spinner
                    android:id="@+id/vince"
                    android:layout_width="171dp"
                    android:layout_height="27dp"
                    android:layout_weight="0.13">

                </Spinner>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/txt5"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold|normal" />

                <EditText
                    android:id="@+id/Dplace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/edt9"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt6"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold|normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="110dp"
                    android:text="@string/txt7"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold|normal" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Spinner
                    android:id="@+id/Province"
                    android:layout_width="131dp"
                    android:layout_height="match_parent">

                </Spinner>

                <Spinner
                    android:id="@+id/amphur"
                    android:layout_width="131dp"
                    android:layout_height="match_parent">

                </Spinner>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt8"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold|normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="110dp"
                    android:text="@string/txt9"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold|normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:ems="10"
                    android:hint="@string/edt5"
                    android:inputType="text"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:ems="10"
                    android:hint="@string/edt6"
                    android:inputType="text"
                    android:textSize="16sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/txt11"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold|normal" />

                <Spinner
                    android:id="@+id/Urgency"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content">

                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/txt12"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold|normal" />

                <EditText
                    android:id="@+id/DSubject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edt11"
                    android:inputType="text"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_marginBottom="12dp"
        android:id="@+id/btnDSubmit"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_btn_button"
        android:text="@string/supmit"
        android:textSize="20dp"
        android:textStyle="bold|normal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
